<resources>
    <string name="application_name" translatable="false">Mirror</string>
    <string name="application_description">Open-source multiprotocol backup application (NFS, SMB, FTP, SFTP, WebDAV)</string>
    <string name="wifi_required_title">WiFi required</string>
    <string name="wifi_required_text">The WiFi option was selected but no connexion is actually active.\nPlease connect to a wireless network to process backup</string>
    <string name="tooltip_new_backup">Use the + button above to set up a new backup</string>
    <string name="tooltip_edit_mode">The top half of your backup cards is interactive:\n- Tap to switch between backup and edit buttons\n- Long press to disable/enable your backups</string>
    <string name="tooltip_group_launch">The top \"sync\" button has two functions:\n- Tap to launch all your backups at once\n- You can group backups by color theme. If you have multiple groups, long press this button to select one and launch its backups</string>
    <string name="main_recycler_hint">Backups list</string>
    <string name="main_color_theme_group">Group #</string>
    <string name="menu_backup_all">Start all backups</string>
    <string name="menu_cancel_all">Cancel all backups</string>
    <string name="menu_backup_new">New backup</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_permissions">Permissions</string>
    <string name="menu_about">About</string>
    <string name="global_information">Information</string>
    <string name="global_confirmation">Confirmation</string>
    <string name="global_warning">Warning</string>
    <string name="global_error">Error</string>
    <string name="global_yes">Yes</string>
    <string name="global_ok">OK</string>
    <string name="global_no">No</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_always">Always</string>
    <string name="global_understood">Understood</string>
    <string name="settings_title">Settings</string>
    <string name="settings_interface_title">Interface</string>
    <string name="settings_language_text">Language:</string>
    <string name="settings_theme_text">Theme:</string>
    <string name="settings_logs_title">Logs</string>
    <string name="settings_logs_text">Number of logs to keep per backup:</string>
    <string name="settings_logs_errors">Keep original raw error messages instead of their simplified version</string>
    <string name="settings_logs_warning_setforeground">Record a warning when progress notification fails</string>
    <string name="settings_logs_preserve_scroll_position">Preserve scroll position when changing log file</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_theme">Apply the configured color theme</string>
    <string name="settings_notifications_type">Scheduled backups result:</string>
    <string name="settings_notifications_tip">- Multiple: one notification per backup\n- Global: single notification, daily summary of all backups\n\n- Discardable: can be removed\n- Permanent: always visible\n\nPermanent notification can prevent scheduled backups issues</string>
    <string name="settings_notifications_warning">Please allow notifications permission to change this setting</string>
    <string name="permission_title">Permissions</string>
    <string name="permission_locked_title">Permission locked</string>
    <string name="permission_locked_text">Android locked this permission.\n\nDo you want to open the application\'s settings and allow it manually ?</string>
    <string name="permission_files_title">Allow files access (required)</string>
    <string name="permission_files_text">Backups are impossible without having access to your files and folders</string>
    <string name="permission_files_locked_text">Android locked this permission making the app is non-functional.\n\nPlease ensure that Mirror will never collect any information about you or your data.\n\nDo you want to open the application\'s settings and allow it manually ?</string>
    <string name="permission_lan_title">Allow LAN access (depends)</string>
    <string name="permission_lan_text">Required since Android 17 to communicate with devices on your Local Area Network</string>
    <string name="permission_notifications_title">Allow notifications (highly recommended)</string>
    <string name="permission_notifications_text">Notifications are used to display ongoing backups progression and scheduled backups result</string>
    <string name="permission_battery_title">Disable battery optimization (recommended)</string>
    <string name="permission_battery_text">Android battery optimization can be too aggressive and interfere with scheduled backups</string>
    <string name="permission_permanent_title">Disable permission revocation (recommended)</string>
    <string name="permission_permanent_text">Permissions can be automatically removed by Android which can lead to malfunctions</string>
    <string name="permission_auto_startup_title">Enable automatic startup (recommended)</string>
    <string name="permission_auto_startup_text">Without this permission scheduled backups may stop working after a device reboot</string>
    <string name="permission_auto_startup_try">Each manufacturer handle this feature their own way and Mirror can only try to open the corresponding settings page.\n\nIn case of failure this will require a manual set-up accordingly to your device</string>
    <string name="permission_auto_startup_manual">Each manufacturer handle this feature their own way which requires a manual set-up accordingly to your device</string>
    <string name="permission_auto_startup_open">Open</string>
    <string name="about_title">About</string>
    <string name="about_app_title">Application</string>
    <string name="about_app_author">Created by <a href="https://github.com/He11PC">HellPC</a></string>
    <string name="about_app_license">License: <a href="https://www.gnu.org/licenses/agpl-3.0.html">AGPLv3</a></string>
    <string name="about_libraries_title">Credits and Third-Party Licenses</string>
    <string name="about_libraries_nfs"><a href="https://github.com/EMCECS/nfs-client-java">EMC NFS</a>: NFS v3 client - Licensed under Apache-2.0 by EMCECS</string>
    <string name="about_libraries_smb"><a href="https://github.com/hierynomus/smbj">SMBJ</a>: SMB2/SMB3 client - Licensed under Apache-2.0 by hierynomus</string>
    <string name="about_libraries_ftp"><a href="https://github.com/apache/commons-net">Commons Net</a>: FTP client - Licensed under Apache-2.0 by the Apache Software Foundation</string>
    <string name="about_libraries_sftp"><a href="https://github.com/mwiede/jsch">JSch</a>: SFTP client - Licensed under BSD-style by mwiede</string>
    <string name="about_libraries_webdav"><a href="https://github.com/thegrizzlylabs/sardine-android">Sardine-Android</a>: WebDAV client - Licensed under Apache-2.0 by thegrizzlylabs</string>
    <string name="about_libraries_okhttp"><a href="https://github.com/rburgst/okhttp-digest">OkHttp-Digest</a>: Digest authentication for WebDAV - Licensed under Apache-2.0 by rburgst</string>
    <string name="about_libraries_autostarter"><a href="https://github.com/judemanutd/AutoStarter">Autostarter</a>: Opens the autostart permission manager - Licensed under MIT by judemanutd</string>
    <string name="about_libraries_thanks">Thank you for your hard work, Mirror could not exist without you :)</string>
    <string name="about_support_title">Support</string>
    <string name="about_support_intro">Mirror is a free and open-source application, distributed without advertising or tracking.\n\nIf you find it useful and would like to support my work, a small donation would be greatly appreciated.</string>
    <string name="about_support_coffee_hint" translatable="false">Buy me a coffee</string>
    <string name="backup_delete">Delete backup</string>
    <string name="backup_delete_warning_message">Do you want to remove this backup ?</string>
    <string name="backup_info">Backup information</string>
    <string name="backup_launch">Launch backup</string>
    <string name="backup_enqueued">Backup enqueued</string>
    <string name="backup_last_date">Last backup:</string>
    <string name="backup_card_move">Move backup card</string>
    <string name="edit_authentication_title">Unlock edition</string>
    <string name="edit_authentication_message">This backup requires biometric authentication</string>
    <string name="edit_title">Edition</string>
    <string name="edit_title_new">Creation</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel">Cancel</string>
    <string name="edit_source">Source</string>
    <string name="edit_destination">Destination</string>
    <string name="edit_exit_alert">Repeat to exit without saving</string>
    <string name="edit_invalid_alert">Please give valid source and destination</string>
    <string name="edit_invalid_credentials_alert">Please give valid credentials (login/password)</string>
    <string name="edit_invalid_hostkey_alert">Please retrieve your server host key for security reasons</string>
    <string name="edit_remote_alert_message">Doing backups between two remote servers through your device is not the most efficient.\n\nIf you can, it would be better to set up your backup directly on one of those machines</string>
    <string name="target_tab_error">Unable to detect current tab</string>
    <string name="target_location">Location:</string>
    <string name="target_location_error">Wrong location selected</string>
    <string name="target_location_device">Device</string>
    <string name="target_location_warning_remote_to_webdav">Backups from a remote source to a WebDav server require the creation of temporary intermediate files on your device</string>
    <string name="target_local_select">Select folder</string>
    <string name="target_local_information_timezone">The FAT file system, commonly used on external storages, can\'t manage time zones and stores dates based on the device local time. As consequence, a complete backup of your files may occur after changing time zone</string>
    <string name="target_local_warning_android_10">Google decided to revoke applications\' permission to write on external storage outside their private folder on Android 10.\n\nDo you want to move your destination folder inside Mirror folder ?\n\nBe careful, Android will delete it when you uninstall this app !</string>
    <string name="target_common_server">Server:</string>
    <string name="target_common_server_hint">Domain name or IP</string>
    <string name="target_common_path">Path:</string>
    <string name="target_common_path_hint">Folder/SubFolder</string>
    <string name="target_common_login">Login:</string>
    <string name="target_common_login_hint">User_login</string>
    <string name="target_common_password">Password:</string>
    <string name="target_common_password_hint">User_password</string>
    <string name="target_common_port">Port:</string>
    <string name="target_common_share">Share:</string>
    <string name="target_common_search">Search</string>
    <string name="target_common_autofill">Autofill</string>
    <string name="target_common_self_signed">Allow self-signed certificates</string>
    <string name="target_common_hostkey">Host key:</string>
    <string name="target_common_hostkey_hint">Tap to retrieve server host key</string>
    <string name="target_nfs_share_hint">Path of the root shared folder</string>
    <string name="target_smb_server_hint">Name or IP</string>
    <string name="target_smb_domain">Domain:</string>
    <string name="target_smb_domain_hint">(facultative)</string>
    <string name="target_smb_share_hint">Name of the root shared folder</string>
    <string name="target_webdav_port_ssl_hint" translatable="false">443</string>
    <string name="target_webdav_ssl">Use SSL</string>
</resources>