<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 HellPC (https://github.com/He11PC).
  ~ This file is part of Mirror, multiprotocol backup application.
  ~
  ~ Mirror is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ See AGENTS.md for AI usage policy.
  ~
  ~ This program is distributed WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU Affero General Public License for more details <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/target_webdav_lyt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.Fragment_TargetWebDav">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/target_webdav_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="target_webdav_txt_password,target_webdav_txt_server,target_webdav_text_port,target_webdav_txt_login,target_webdav_txt_path" />

    <TextView
        android:id="@+id/target_webdav_txt_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_common_server"
        app:layout_constraintBaseline_toBaselineOf="@+id/target_webdav_edit_server"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/target_webdav_edit_server"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/target_common_server_hint"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:nextFocusForward="@id/target_webdav_edit_port"
        app:layout_constraintEnd_toStartOf="@+id/target_webdav_btn_credentials_fill"
        app:layout_constraintStart_toEndOf="@+id/target_webdav_barrier"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/target_webdav_btn_credentials_fill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/target_common_autofill"
        android:minWidth="32dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_autofill"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/target_webdav_edit_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/target_webdav_edit_server" />

    <TextView
        android:id="@+id/target_webdav_text_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_common_port"
        app:layout_constraintBaseline_toBaselineOf="@+id/target_webdav_edit_port"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/target_webdav_flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:constraint_referenced_ids="target_webdav_edit_port, target_webdav_chk_ssl"
        app:flow_horizontalBias="0"
        app:flow_horizontalGap="8dp"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/target_webdav_barrier"
        app:layout_constraintTop_toBottomOf="@+id/target_webdav_edit_server" />

    <EditText
        android:id="@+id/target_webdav_edit_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:hint="@string/target_webdav_port_ssl_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:nextFocusForward="@id/target_webdav_chk_ssl"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/target_webdav_chk_ssl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:nextFocusForward="@id/target_webdav_edit_login"
        android:text="@string/target_webdav_ssl"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/target_webdav_txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_common_login"
        app:layout_constraintBaseline_toBaselineOf="@+id/target_webdav_edit_login"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/target_webdav_edit_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/target_common_login_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:nextFocusForward="@id/target_webdav_edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/target_webdav_barrier"
        app:layout_constraintTop_toBottomOf="@+id/target_webdav_flow"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/target_webdav_txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_common_password"
        app:layout_constraintBaseline_toBaselineOf="@+id/target_webdav_edit_password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/target_webdav_edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/target_common_password_hint"
        android:importantForAutofill="no"
        android:inputType="textWebPassword|textNoSuggestions"
        android:nextFocusForward="@id/target_webdav_chk_self_signed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/target_webdav_barrier"
        app:layout_constraintTop_toBottomOf="@+id/target_webdav_edit_login"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/target_webdav_chk_self_signed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:nextFocusForward="@id/target_webdav_edit_hostkey"
        app:layout_constraintTop_toBottomOf="@+id/target_webdav_edit_password"
        android:text="@string/target_common_self_signed" />

    <TextView
        android:id="@+id/target_webdav_txt_hostkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_common_hostkey"
        app:layout_constraintBaseline_toBaselineOf="@+id/target_webdav_edit_hostkey"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/target_webdav_edit_hostkey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="14dp"
        android:paddingBottom="16dp"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/target_common_hostkey_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textNoSuggestions"
        android:gravity="top"
        android:textColor="@color/gray"
        android:nextFocusForward="@id/target_webdav_edit_share"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/target_webdav_barrier"
        app:layout_constraintTop_toBottomOf="@+id/target_webdav_chk_self_signed"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/target_webdav_txt_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_common_share"
        app:layout_constraintBaseline_toBaselineOf="@+id/target_webdav_edit_share"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/target_webdav_edit_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/target_nfs_share_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:nextFocusForward="@id/target_webdav_edit_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/target_webdav_barrier"
        app:layout_constraintTop_toBottomOf="@+id/target_webdav_edit_hostkey"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/target_webdav_txt_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_common_path"
        app:layout_constraintBaseline_toBaselineOf="@+id/target_webdav_edit_path"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/target_webdav_edit_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="14dp"
        android:paddingBottom="16dp"
        android:hint="@string/target_common_path_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:nextFocusForward="@id/target_webdav_btn_path_search"
        app:layout_constraintEnd_toStartOf="@+id/target_webdav_btn_path_search"
        app:layout_constraintStart_toEndOf="@+id/target_webdav_barrier"
        app:layout_constraintTop_toBottomOf="@+id/target_webdav_edit_share"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/target_webdav_btn_path_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/target_common_search"
        android:minWidth="32dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/target_webdav_edit_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target_webdav_edit_share" />

</androidx.constraintlayout.widget.ConstraintLayout>